--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+BeautifulSoup==3.2.1
 Gooey==0.9.2.3
-pkg-resources==0.0.0
 PyInstaller==3.2
 requests==2.11.1
+wheel==0.29.0
+wsgiref==0.1.2
+wxPython==3.0.2.0
+wxPython-common==3.0.2.0
