Update following changes in finisherpix site layout
Updated requirements too to more up to date versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 BeautifulSoup==3.2.1
-Gooey==0.9.2.3
-PyInstaller==3.2
-requests==2.11.1
+Gooey==1.0.1
+PyInstaller==3.4
+requests==2.20.0
 wheel==0.29.0
 wsgiref==0.1.2
-wxPython==3.0.2.0
-wxPython-common==3.0.2.0
+wxPython
 cherrypy
 Jinja2
